--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<div class="content">
 						<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
 						<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
-						<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
+						<a href="https://rtg.kr/server.html" class="special">가격표</a>
 					</div>
 				</div>
 			</section>
