--- a/server.html
+++ b/server.html
@@ -73,7 +73,7 @@
 						</div>
 						<h3 class="major">가격표</h3>
 
-						<h4>DDR3 제품군</h4>
+						<h4>가성비 제품군</h4>
 						<div class="table-wrapper">
 							<table class="alt">
 								<thead>
@@ -112,7 +112,7 @@
 								</tbody>
 							</table>
 						</div>
-						<h4>DDR4 제품군</h4>
+						<h4>고성능 제품군</h4>
 						<div class="table-wrapper">
 							<table class="alt">
 								<thead>
@@ -150,6 +150,16 @@
 									</tr>
 								</tbody>
 							</table>
+						</div>
+						<h3 class="major">부가서비스</h3>
+						<div class="row">
+							<div class="col-6 col-12-medium">
+								<ul>
+									<li>윈도우 30,000 원/월</li>
+									<li>메모리 16GB 추가 40,000 원/월</li>
+									<li>SSD 1TB 추가 40,000 원/월</li>
+								</ul>
+							</div>
 						</div>
 						<div class="row">
 							<div class="col-12 col-12-medium">
