--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="content">
 						<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
 						<p>UDP, TCP, 해외망 제한 X / 디도스 기본 방어 / 공인 IP 포트 제한 X / 트래픽 제한 X / 윈도우, 우분투 등 다양한 OS 제공</p>
-						<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
+						<a href="http://pf.kakao.com/_xoNpUT" class="special">재고부족</a>
 					</div>
 				</div>
 			</section>
@@ -91,6 +91,7 @@
 			</section>
 
 			<!-- Four -->
+			<!--
 			<section id="four" class="wrapper alt style1">
 				<div class="inner">
 					<h2 class="major">파트너(Parter)</h2>
@@ -125,7 +126,7 @@
 						<li><a href="http://pf.kakao.com/_xoNpUT" class="button">상담요청</a></li>
 					</ul>
 				</div>
-			</section>
+			</section>-->
 
 		</section>
 
