--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 			<div class="inner">
 				<div class="logo"><span class="icon fa-gem"></span></div>
 				<h2>RTGROUP</h2>
-				<p>가성비 1위/맞춤형 전문/UDP, TCP, 해외망 디도스 보안 맞춤형 제공</p>
+				<p>가성비 1위/맞춤형 전문/UDP, TCP, 해외망 디도스 보안 맞춤형 제공<br>
+				사칭, 불법 업체를 조심하세요. 정직하고 안정적으로 서비스를 제공합니다.<br>
+			현재 허위사실유포자, 사업자명 도용 등 RTGROUP 에게 피해를 주는 개인/단체를 상대로 강력하게 법적대응을 하고 있습니다.</p>
 			</div>
 		</section>
 
@@ -57,11 +59,11 @@
 			<!-- One -->
 			<section id="one" class="wrapper spotlight style1">
 				<div class="inner">
-					<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+					<a href="https://rtg.kr/cloud.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
 						<p>UDP, TCP, 해외망 제한 X / 디도스 기본 방어 / 공인 IP 포트 제한 X / 트래픽 제한 X / 윈도우, 우분투 등 다양한 OS 제공</p>
-						<a href="http://pf.kakao.com/_xoNpUT" class="special">재고부족</a>
+						<a href="https://rtg.kr/cloud.html" class="special">소개</a>
 					</div>
 				</div>
 			</section>
@@ -69,11 +71,11 @@
 			<!-- Two -->
 			<section id="two" class="wrapper alt spotlight style2">
 				<div class="inner">
-					<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+					<a href="https://rtg.kr/server.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
 						<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
-						<a href="https://rtg.kr/server.html" class="special">가격표</a>
+						<a href="https://rtg.kr/server.html" class="special">소개</a>
 					</div>
 				</div>
 			</section>
@@ -89,44 +91,6 @@
 					</div>
 				</div>
 			</section>
-
-			<!-- Four -->
-			<!--
-			<section id="four" class="wrapper alt style1">
-				<div class="inner">
-					<h2 class="major">파트너(Parter)</h2>
-					<p></p>
-					<section class="features">
-						<article>
-							<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="images/pic04.jpg" alt="" /></a>
-							<h3 class="major">SKIDC</h3>
-							<p>SKIDC</p>
-							<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
-						</article>
-						<article>
-							<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="images/pic05.jpg" alt="" /></a>
-							<h3 class="major">KTIDC</h3>
-							<p>KTIDC</p>
-							<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
-						</article>
-						<article>
-							<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="images/pic06.jpg" alt="" /></a>
-							<h3 class="major">LGIDC</h3>
-							<p>LGIDC</p>
-							<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
-						</article>
-						<article>
-							<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="images/pic07.jpg" alt="" /></a>
-							<h3 class="major">Etc</h3>
-							<p>Etc</p>
-							<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
-						</article>
-					</section>
-					<ul class="actions">
-						<li><a href="http://pf.kakao.com/_xoNpUT" class="button">상담요청</a></li>
-					</ul>
-				</div>
-			</section>-->
 
 		</section>
 
