--- a/cloud.html
+++ b/cloud.html
@@ -62,7 +62,7 @@
 									<li>CPU E5-2690 v1 2CPU/RAM 384GB</li>
 									<li>CPU E5-2667 v2 2CPU/RAM 768GB</li>
 									<li>CPU E5-2680 v2 2CPU/RAM 384GB</li>
-									<li>클라우드 상품 판매 중단</li>
+									<li>재고 부족 판매 중단</li>
 								</ul>
 							</div>
 						</div>
@@ -71,10 +71,7 @@
 								<div class="col-12"><span class="image fit"><img src="https://cdn.discordapp.com/attachments/799977117647372338/800609699903832101/1234.png" alt="" /></span></div>
 							</div>
 						</div>
-						<!--
 						<h3 class="major">가격표</h3>
-
-						<h4>가성비 제품군</h4>
 						<div class="table-wrapper">
 							<table class="alt">
 								<thead>
@@ -87,67 +84,28 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>4 Core</td>
-										<td>8 GB</td>
-										<td>500 GB</td>
-										<td>10 만원</td>
+										<td>2 Core</td>
+										<td>4 GB</td>
+										<td>50 GB</td>
+										<td>2 만원</td>
 									</tr>
 									<tr>
-										<td>6 Core</td>
-										<td>12 GB</td>
-										<td>500 GB</td>
-										<td>12 만원</td>
+										<td>4 Core</td>
+										<td>8 GB</td>
+										<td>50 GB</td>
+										<td>4 만원</td>
 									</tr>
 									<tr>
 										<td>8 Core</td>
-										<td>12 GB</td>
-										<td>500 GB</td>
-										<td>14 만원</td>
+										<td>16 GB</td>
+										<td>100 GB</td>
+										<td>8 만원</td>
 									</tr>
 									<tr>
-										<td>12 Core</td>
-										<td>12 GB</td>
-										<td>500 GB</td>
+										<td>16 Core</td>
+										<td>32 GB</td>
+										<td>200 GB</td>
 										<td>16 만원</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						<h4>고성능 제품군</h4>
-						<div class="table-wrapper">
-							<table class="alt">
-								<thead>
-									<tr>
-										<th>CPU</th>
-										<th>RAM</th>
-										<th>NVMe M.2</th>
-										<th>가격/월(VAT 별도)</th>
-									</tr>
-								</thead>
-								<tbody>
-									<tr>
-										<td>4 Core</td>
-										<td>8 GB</td>
-										<td>500 GB</td>
-										<td>18 만원</td>
-									</tr>
-									<tr>
-										<td>6 Core</td>
-										<td>16 GB</td>
-										<td>500 GB</td>
-										<td>20 만원</td>
-									</tr>
-									<tr>
-										<td>8 Core</td>
-										<td>16 GB</td>
-										<td>500 GB</td>
-										<td>22 만원</td>
-									</tr>
-									<tr>
-										<td>12 Core</td>
-										<td>16 GB</td>
-										<td>500 GB</td>
-										<td>24 만원</td>
 									</tr>
 								</tbody>
 							</table>
@@ -156,12 +114,11 @@
 						<div class="row">
 							<div class="col-6 col-12-medium">
 								<ul>
-									<li>윈도우 30,000 원/월</li>
-									<li>메모리 16GB 추가 40,000 원/월</li>
-									<li>SSD 1TB 추가 40,000 원/월</li>
+									<li>메모리 2GB 추가 10,000 원/월</li>
+									<li>대역폭 10 Mbps 추가 50,000 원/월</li>
 								</ul>
 							</div>
-						</div>-->
+						</div>
 						<div class="row">
 							<div class="col-12 col-12-medium">
 								<ul class="actions stacked">
