--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 			<div class="inner">
 				<div class="logo"><span class="icon fa-gem"></span></div>
 				<h2>RTGROUP</h2>
-				<p>가성비 1위/맞춤형 전문/UDP, TCP, 해외망 디도스 보안 맞춤형 제공<br>
-				사칭, 불법 업체를 조심하세요. 정직하고 안정적으로 서비스를 제공합니다.<br>
-			현재 허위사실유포자, 사업자명 도용 등 RTGROUP 에게 피해를 주는 개인/단체를 상대로 강력하게 법적대응을 하고 있습니다.</p>
+				<p>가성비 1위/맞춤형 전문/디도스 보안 전문 업체<br>
+					정직하게 서비스를 제공합니다.<br>
+				악의적으로 허위사실유포, 도용, 재판매 등 저희 업체에 피해를 끼치고 있으며 현재 강력하게 법적대응을 하고 있습니다.<br>
 			</div>
 		</section>
 
@@ -62,7 +62,7 @@
 					<a href="https://rtg.kr/cloud.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
-						<p>UDP, TCP, 해외망 제한 X / 디도스 기본 방어 / 공인 IP 포트 제한 X / 트래픽 제한 X / 윈도우, 우분투 등 다양한 OS 제공</p>
+						<p></p>
 						<a href="https://rtg.kr/cloud.html" class="special">소개</a>
 					</div>
 				</div>
