--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<h2>RTGROUP</h2>
 				<p>가성비 1위/맞춤형 전문/디도스 보안 전문 업체<br>
 					정직하게 서비스를 제공합니다.<br>
-				악의적으로 허위사실유포, 도용, 재판매 등 저희 업체에 피해를 끼치고 있으며 현재 강력하게 법적대응을 하고 있습니다.<br>
+				허위사실유포, 사칭, 재판매 등 피해를 주는 사람들을 강력하게 법적대응을 하고 있습니다.<br>
 			</div>
 		</section>
 
@@ -62,7 +62,7 @@
 					<a href="https://rtg.kr/cloud.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
-						<p></p>
+						<p>공인IP/디도스 방어/트래픽 무제한 이 모든 것을 메모리 당 5,000 원으로 이용해보시길 바랍니다.</p>
 						<a href="https://rtg.kr/cloud.html" class="special">소개</a>
 					</div>
 				</div>
@@ -98,7 +98,8 @@
 		<section id="footer">
 			<div class="inner">
 				<h2 class="major">문의, 상담(Contect)</h2>
-				<p>서비스 신청, 각종 문의, 제휴 등 RTGROUP 사와 연락을 하고 싶으시다면 언제든지 연락남겨주시길 바랍니다.</p>
+				<p>서비스 신청, 각종 문의, 제휴 등 각종문의는 아래 연락처로 언제든지 연락남겨주시길 바랍니다.<br>
+				코로나19로 인해 이메일로 남겨주시면 감사하겠습니다.</p>
 				<ul class="contact">
 					<li class="icon solid fa-phone">+82 0507-1341-8458</li>
 					<li class="icon solid fa-envelope">rtgroup@naver.com</li>
