--- a/cloud.html
+++ b/cloud.html
@@ -122,7 +122,7 @@
 						<div class="row">
 							<div class="col-12 col-12-medium">
 								<ul class="actions stacked">
-									<li><a href="#" class="button primary fit">상담요청</a></li>
+									<li><a href="http://pf.kakao.com/_xoNpUT/chat" class="button primary fit">상담요청</a></li>
 								</ul>
 							</div>
 						</div>
