--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 				<div class="logo"><span class="icon fa-gem"></span></div>
 				<h2>RTGROUP</h2>
 				<p>가성비 1위/맞춤형 전문/디도스 보안 전문 업체<br>
-					정직하게 서비스를 제공합니다.<br>
-				허위사실유포, 사칭, 재판매 등 피해를 주는 사람들을 강력하게 법적대응을 하고 있습니다.<br>
+					올바르고 정직하게 서비스를 제공합니다.
 			</div>
 		</section>
 
@@ -86,7 +85,7 @@
 					<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 					<div class="content">
 						<h2 class="major">맞춤형 서비스(Custom Service)</h2>
-						<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 기타 원하시는 서비스들을 요청해보시길 바랍니다.</p>
+						<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 다양한 서비스를 제공하고 있습니다.</p>
 						<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
 					</div>
 				</div>
@@ -98,8 +97,7 @@
 		<section id="footer">
 			<div class="inner">
 				<h2 class="major">문의, 상담(Contect)</h2>
-				<p>서비스 신청, 각종 문의, 제휴 등 각종문의는 아래 연락처로 언제든지 연락남겨주시길 바랍니다.<br>
-				코로나19로 인해 이메일로 남겨주시면 감사하겠습니다.</p>
+				<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
 				<ul class="contact">
 					<li class="icon solid fa-phone">+82 0507-1341-8458</li>
 					<li class="icon solid fa-envelope">rtgroup@naver.com</li>
