--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<!-- Footer -->
 		<section id="footer">
 			<div class="inner">
-				<h2 class="major">문의, 상담(Contect)</h2>
+				<h2 class="major">연락처(Contect)</h2>
 				<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
 				<ul class="contact">
 					<li class="icon solid fa-phone">+82 0507-1341-8458</li>
