--- a/index.html
+++ b/index.html
@@ -49,102 +49,107 @@
 				<h2>RTGROUP</h2>
 				<p>가성비 1위/맞춤형 전문/디도스 보안 전문 업체<br>
 					올바르고 정직하게 서비스를 제공합니다.
-			</div>
-		</section>
-
-		<!-- Wrapper -->
-		<section id="wrapper">
-
-			<!-- One -->
-			<section id="one" class="wrapper spotlight style1">
-				<div class="inner">
-					<a href="https://rtg.kr/cloud.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
-						<p>공인IP/디도스 방어/트래픽 무제한 이 모든 것을 메모리 당 5,000 원으로 이용해보시길 바랍니다.</p>
-						<a href="https://rtg.kr/cloud.html" class="special">소개</a>
-					</div>
 				</div>
 			</section>
 
-			<!-- Two -->
-			<section id="two" class="wrapper alt spotlight style2">
-				<div class="inner">
-					<a href="https://rtg.kr/server.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
-						<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
-						<a href="https://rtg.kr/server.html" class="special">소개</a>
+			<!-- Wrapper -->
+			<section id="wrapper">
+
+				<!-- One -->
+				<section id="one" class="wrapper spotlight style1">
+					<div class="inner">
+						<a href="https://rtg.kr/cloud.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
+							<p>공인IP/디도스 방어/트래픽 무제한 이 모든 것을 메모리 당 5,000 원으로 이용해보시길 바랍니다.</p>
+							<a href="https://rtg.kr/cloud.html" class="special">소개</a>
+						</div>
 					</div>
+				</section>
+
+				<!-- Two -->
+				<section id="two" class="wrapper alt spotlight style2">
+					<div class="inner">
+						<a href="https://rtg.kr/server.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
+							<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
+							<a href="https://rtg.kr/server.html" class="special">소개</a>
+						</div>
+					</div>
+				</section>
+
+				<!-- Three -->
+				<section id="three" class="wrapper spotlight style3">
+					<div class="inner">
+						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+						<div class="content">
+							<h2 class="major">맞춤형 서비스(Custom Service)</h2>
+							<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 다양한 서비스를 제공하고 있습니다.</p>
+							<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
+						</div>
+					</div>
+				</section>
+				<div class="wrapper">
+					<div class="inner">
+						<section>
+							<h3 class="major">Image</h3>
+							<h4>Fit</h4>
+							<div class="box alt">
+								<div class="row gtr-uniform">
+									<div class="col-6">
+										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
+									</div>
+									<div class="col-6">
+										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
+									</div>
+									<div class="col-6">
+										<span class="image fit"><img src="images/pic06.jpg" alt="" /></span>
+									</div>
+									<div class="col-6">
+										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
+									</div>
+								</div>
+							</div>
+						</section>
+					</div>
+				</div>
+
+			</section>
+
+			<!-- Footer -->
+			<section id="footer">
+				<div class="inner">
+					<h2 class="major">연락처(Contect)</h2>
+					<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
+					<ul class="contact">
+						<li class="icon solid fa-phone">+82 0507-1341-8458</li>
+						<li class="icon solid fa-envelope">rtgroup@naver.com</li>
+					</ul>
+					<ul class="contact">
+						<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
+						<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
+						<li>RTGROUP</li>
+						<li>205-21-72138</li>
+						<li>경북포항-0040</li>
+						<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
+						<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
+					</ul>
 				</div>
 			</section>
 
-			<!-- Three -->
-			<section id="three" class="wrapper spotlight style3">
-				<div class="inner">
-					<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-					<div class="content">
-						<h2 class="major">맞춤형 서비스(Custom Service)</h2>
-						<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 다양한 서비스를 제공하고 있습니다.</p>
-						<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
-					</div>
-				</div>
-			</section>
+		</div>
 
-			<section>
-										<h3 class="major">Image</h3>
-										<h4>Fit</h4>
-										<div class="box alt">
-											<div class="row gtr-uniform">
-												<div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/pic05.jpg" alt="" /></span></div>
-											</div>
-										</div>
-									</section>
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
-		</section>
-
-		<!-- Footer -->
-		<section id="footer">
-			<div class="inner">
-				<h2 class="major">연락처(Contect)</h2>
-				<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
-				<ul class="contact">
-					<li class="icon solid fa-phone">+82 0507-1341-8458</li>
-					<li class="icon solid fa-envelope">rtgroup@naver.com</li>
-				</ul>
-				<ul class="contact">
-					<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
-					<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
-					<li>RTGROUP</li>
-					<li>205-21-72138</li>
-					<li>경북포항-0040</li>
-					<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
-					<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
-				</ul>
-			</div>
-		</section>
-
-	</div>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrollex.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
-</html>
+	</body>
+	</html>
