--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 				<div class="wrapper">
 					<div class="inner">
 						<section>
-							<h3 class="major">Image</h3>
-							<h4>Fit</h4>
+							<h3 class="major">파트너(Parter)</h3>
 							<div class="box alt">
 								<div class="row gtr-uniform">
+									<!--
 									<div class="col-6">
 										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
 									</div>
@@ -108,7 +108,7 @@
 									</div>
 									<div class="col-6">
 										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
-									</div>
+									</div>-->
 								</div>
 							</div>
 						</section>
