--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li><a href="https://pf.kakao.com/_xoNpUT">상담센터</a></li>
 					<li><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
 				</ul>
-				<a href="#" class="close">닫기</a>
+				<a href="#" class="close"></a>
 			</div>
 		</nav>
 
@@ -96,19 +96,18 @@
 							<h3 class="major">파트너(Parter)</h3>
 							<div class="box alt">
 								<div class="row gtr-uniform">
-									<!--
 									<div class="col-6">
 										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
 									</div>
 									<div class="col-6">
-										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
+										
 									</div>
 									<div class="col-6">
 										<span class="image fit"><img src="images/pic06.jpg" alt="" /></span>
 									</div>
 									<div class="col-6">
 										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
-									</div>-->
+									</div>
 								</div>
 							</div>
 						</section>
