--- a/intro.html
+++ b/intro.html
@@ -38,7 +38,7 @@
 					<li><a href="https://pf.kakao.com/_xoNpUT">상담센터</a></li>
 					<li><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
 				</ul>
-				<a href="#" class="close">닫기</a>
+				<a href="#" class="close"></a>
 			</div>
 		</nav>
 
