--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<!-- One -->
 				<section id="one" class="wrapper spotlight style1">
 					<div class="inner">
-						<a href="https://rtg.kr/cloud.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="https://rtg.kr/cloud.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948123304067082/cloud.png" alt="" /></a>
 						<div class="content">
 							<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
 							<p>공인IP/디도스 방어/트래픽 무제한 이 모든 것을 메모리 당 5,000 원으로 이용해보시길 바랍니다.</p>
@@ -70,7 +70,7 @@
 				<!-- Two -->
 				<section id="two" class="wrapper alt spotlight style2">
 					<div class="inner">
-						<a href="https://rtg.kr/server.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="https://rtg.kr/server.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948511100239872/server.png" alt="" /></a>
 						<div class="content">
 							<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
 							<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
@@ -82,7 +82,7 @@
 				<!-- Three -->
 				<section id="three" class="wrapper spotlight style3">
 					<div class="inner">
-						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800947862942646272/custom.png" alt="" /></a>
 						<div class="content">
 							<h2 class="major">맞춤형 서비스(Custom Service)</h2>
 							<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 다양한 서비스를 제공하고 있습니다.</p>
@@ -97,58 +97,53 @@
 							<div class="box alt">
 								<div class="row gtr-uniform">
 									<div class="col-6">
-										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
-									</div>
-									<div class="col-6">
-										
-									</div>
-									<div class="col-6">
-										<span class="image fit"><img src="images/pic06.jpg" alt="" /></span>
-									</div>
-									<div class="col-6">
-										<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>
+										<!--
+											<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>-->
+										</div>
+										<div class="col-6">
+
+										</div>
 									</div>
 								</div>
-							</div>
-						</section>
+							</section>
+						</div>
 					</div>
-				</div>
 
-			</section>
+				</section>
 
-			<!-- Footer -->
-			<section id="footer">
-				<div class="inner">
-					<h2 class="major">연락처(Contect)</h2>
-					<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
-					<ul class="contact">
-						<li class="icon solid fa-phone">+82 0507-1341-8458</li>
-						<li class="icon solid fa-envelope">rtgroup@naver.com</li>
-					</ul>
-					<ul class="contact">
-						<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
-						<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
-						<li>RTGROUP</li>
-						<li>205-21-72138</li>
-						<li>경북포항-0040</li>
-						<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
-						<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
-					</ul>
-				</div>
-			</section>
+				<!-- Footer -->
+				<section id="footer">
+					<div class="inner">
+						<h2 class="major">연락처(Contect)</h2>
+						<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
+						<ul class="contact">
+							<li class="icon solid fa-phone">+82 0507-1341-8458</li>
+							<li class="icon solid fa-envelope">rtgroup@naver.com</li>
+						</ul>
+						<ul class="contact">
+							<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
+							<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
+							<li>RTGROUP</li>
+							<li>205-21-72138</li>
+							<li>경북포항-0040</li>
+							<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
+							<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
+						</ul>
+					</div>
+				</section>
 
-		</div>
+			</div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+			<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
-	</body>
-	</html>
+		</body>
+		</html>
