--- a/cloud.html
+++ b/cloud.html
@@ -59,9 +59,15 @@
 						<div class="row">
 							<div class="col-6 col-12-medium">
 								<ul>
-									<li>CPU E5-2690 v1 2CPU/RAM 384GB</li>
-									<li>CPU E5-2667 v2 2CPU/RAM 768GB</li>
-									<li>CPU E5-2680 v2 2CPU/RAM 384GB</li>
+									<li>서버용 컴퓨터 판매중(SSD 무료제공)</li>
+									<li>E5-2690v1 2CPU/RAM 384GB(문의)</li>
+									<li>16코어 32쓰레드 기본 2.9GHz 터보 3.8GHz</li>
+									<li>E5-2667v2 2CPU/RAM 768GB(문의)</li>
+									<li>16코어 32쓰레드 기본 3.3GHz 터보 4.0GHz</li>
+									<li>E5-2680v2 2CPU/RAM 384GB(문의)</li>
+									<li>20코어 40쓰레드 기본 2.8GHz 터보 3.6GHz</li>
+									<li>X5670 2CPU/RAM 80GB(50만원)</li>
+									<li>12코어 24쓰레드 기본 2.93GHz 터보 3.33GHz</li>
 									<li>재고 부족 판매 중단</li>
 								</ul>
 							</div>
