--- a/index.html
+++ b/index.html
@@ -93,57 +93,61 @@
 				<div class="wrapper">
 					<div class="inner">
 						<section>
-							<h3 class="major">파트너(Parter)</h3>
+							<h3 class="major">Ads</h3>
 							<div class="box alt">
 								<div class="row gtr-uniform">
 									<div class="col-6">
-										<!--
-											<span class="image fit"><img src="images/pic05.jpg" alt="" /></span>-->
-										</div>
-										<div class="col-6">
-
-										</div>
+										<span class="image fit">
+											<!-- 2021 02 22 -->
+											<iframe width="100%" height="360" src="https://www.youtube.com/embed/ZykQ7bgQ2xs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</span>
+									</div>
+									<div class="col-6">
+										<span class="image fit">
+											<!-- 2021 02 22 -->
+											<iframe width="100%" height="360" src="https://www.youtube.com/embed/0DfRJ0KD1rw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										</span>
 									</div>
 								</div>
-							</section>
-						</div>
+							</div>
+						</section>
 					</div>
+				</div>
 
-				</section>
+			</section>
+			<!-- Footer -->
+			<section id="footer">
+				<div class="inner">
+					<h2 class="major">연락처(Contect)</h2>
+					<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
+					<ul class="contact">
+						<li class="icon solid fa-phone">+82 0507-1341-8458</li>
+						<li class="icon solid fa-envelope">rtgroup@naver.com</li>
+					</ul>
+					<ul class="contact">
+						<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
+						<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
+						<li>RTGROUP</li>
+						<li>205-21-72138</li>
+						<li>경북포항-0040</li>
+						<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
+						<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
+					</ul>
+				</div>
+			</section>
 
-				<!-- Footer -->
-				<section id="footer">
-					<div class="inner">
-						<h2 class="major">연락처(Contect)</h2>
-						<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
-						<ul class="contact">
-							<li class="icon solid fa-phone">+82 0507-1341-8458</li>
-							<li class="icon solid fa-envelope">rtgroup@naver.com</li>
-						</ul>
-						<ul class="contact">
-							<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
-							<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
-							<li>RTGROUP</li>
-							<li>205-21-72138</li>
-							<li>경북포항-0040</li>
-							<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
-							<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
-						</ul>
-					</div>
-				</section>
+		</div>
 
-			</div>
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
-			<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-		</body>
-		</html>
+	</body>
+	</html>
