--- a/index.html
+++ b/index.html
@@ -48,84 +48,94 @@
 				<div class="logo"><span class="icon fa-gem"></span></div>
 				<h2>RTGROUP</h2>
 				<p>가성비 1위/맞춤형 전문/디도스 보안 전문 업체<br>
-					올바르고 정직하게 서비스를 제공합니다.
-				</div>
-			</section>
+				올바르고 정직하게 서비스를 제공합니다.</p>
+			</div>
+		</section>
 
-			<!-- Wrapper -->
-			<section id="wrapper">
+		<!-- Wrapper -->
+		<section id="wrapper">
 
-				<!-- One -->
-				<section id="one" class="wrapper spotlight style1">
-					<div class="inner">
-						<a href="https://rtg.kr/cloud.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948123304067082/cloud.png" alt="" /></a>
-						<div class="content">
-							<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
-							<p>공인IP/디도스 방어/트래픽 무제한 이 모든 것을 메모리 당 5,000 원으로 이용해보시길 바랍니다.</p>
-							<a href="https://rtg.kr/cloud.html" class="special">소개</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- Two -->
-				<section id="two" class="wrapper alt spotlight style2">
-					<div class="inner">
-						<a href="https://rtg.kr/server.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948511100239872/server.png" alt="" /></a>
-						<div class="content">
-							<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
-							<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
-							<a href="https://rtg.kr/server.html" class="special">소개</a>
-						</div>
-					</div>
-				</section>
-
-				<!-- Three -->
-				<section id="three" class="wrapper spotlight style3">
-					<div class="inner">
-						<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800947862942646272/custom.png" alt="" /></a>
-						<div class="content">
-							<h2 class="major">맞춤형 서비스(Custom Service)</h2>
-							<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 다양한 서비스를 제공하고 있습니다.</p>
-							<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
-						</div>
-					</div>
-				</section>
-				
-
-			</section>
-			<!-- Footer -->
-			<section id="footer">
+			<!-- One -->
+			<section id="one" class="wrapper spotlight style1">
 				<div class="inner">
-					<h2 class="major">연락처(Contect)</h2>
-					<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
-					<ul class="contact">
-						<li class="icon solid fa-phone">+82 0507-1341-8458</li>
-						<li class="icon solid fa-envelope">rtgroup@naver.com</li>
-					</ul>
-					<ul class="contact">
-						<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
-						<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
-						<li>RTGROUP</li>
-						<li>205-21-72138</li>
-						<li>경북포항-0040</li>
-						<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
-						<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
-					</ul>
+					<a href="https://rtg.kr/cloud.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948123304067082/cloud.png" alt="" /></a>
+					<div class="content">
+						<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
+						<p>공인IP/디도스 방어/트래픽 무제한 이 모든 것을 메모리 당 5,000 원으로 이용해보시길 바랍니다.</p>
+						<a href="https://rtg.kr/cloud.html" class="special">소개</a>
+					</div>
 				</div>
 			</section>
 
-		</div>
+			<!-- Two -->
+			<section id="two" class="wrapper alt spotlight style2">
+				<div class="inner">
+					<a href="https://rtg.kr/server.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948511100239872/server.png" alt="" /></a>
+					<div class="content">
+						<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
+						<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
+						<a href="https://rtg.kr/server.html" class="special">소개</a>
+					</div>
+				</div>
+			</section>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
+			<!-- Three -->
+			<section id="three" class="wrapper spotlight style3">
+				<div class="inner">
+					<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800947862942646272/custom.png" alt="" /></a>
+					<div class="content">
+						<h2 class="major">맞춤형 서비스(Custom Service)</h2>
+						<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 다양한 서비스를 제공하고 있습니다.</p>
+						<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
+					</div>
+				</div>
+			</section>
+		</section>
 
-	</body>
-	</html>
+		<!-- Footer -->
+		<section id="footer">
+			<div class="inner">
+				<h2 class="major">연락처(Contect)</h2>
+				<p>아래 연락처를 통해 상담, 문의가 가능합니다.</p>
+				<ul class="contact">
+					<li class="icon solid fa-phone">+82 0507-1341-8458</li>
+					<li class="icon solid fa-envelope">rtgroup@naver.com</li>
+				</ul>
+				<ul class="contact">
+					<li class="icon Business fa-address-card"><a href="http://pf.kakao.com/_xoNpUT">플러스친구</a></li>
+					<li class="icon brands fa-discord"><a href="https://discord.gg/KPyU5qhWzH">디스코드</a></li>
+				</ul>
+				<h2 class="major">유료광고(Ads)</h2>
+				<ul class="contact">
+					<li>
+						<iframe width="100%" height="315" src="https://www.youtube.com/embed/0DfRJ0KD1rw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</li>
+				</ul>
+				<ul class="contact">
+					<li>
+						<iframe width="100%" height="315" src="https://www.youtube.com/embed/ZykQ7bgQ2xs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					</li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; 2018-2021 RTGROUP, All Rights Reserved.</li>
+					<li>RTGROUP</li>
+					<li>205-21-72138</li>
+					<li>경북포항-0040</li>
+					<li><a href="https://tgd.kr/s/rtgroup/34962850">이용약관</a></li>
+					<li><a href="https://tgd.kr/s/rtgroup/42483608">개인정보처리방침</a></li>
+				</ul>
+			</div>
+		</section>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+</html>
