--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
 			<!-- One -->
 			<section id="one" class="wrapper spotlight style1">
 				<div class="inner">
-					<a href="https://rtg.kr/cloud.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948123304067082/cloud.png" alt="" /></a>
+					<a href="https://rtg.kr/server.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948511100239872/server.png" alt="" /></a>
 					<div class="content">
-						<h2 class="major">클라우드 호스팅(Cloud Hosting)</h2>
-						<p>공인IP/디도스 방어/트래픽 무제한 이 모든 것을 메모리 당 5,000 원으로 이용해보시길 바랍니다.</p>
-						<a href="https://rtg.kr/cloud.html" class="special">소개</a>
+						<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
+						<p>DDR4 CPU E-2136 클럭 4.5GHz 고성능 서버를 제공합니다<br>
+						대역폭 30Mbps, 디도스 방어 10G 기본 제공(추가 가능)</p>
+						<a href="https://rtg.kr/server.html" class="special">소개</a>
 					</div>
 				</div>
 			</section>
@@ -70,11 +71,12 @@
 			<!-- Two -->
 			<section id="two" class="wrapper alt spotlight style2">
 				<div class="inner">
-					<a href="https://rtg.kr/server.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948511100239872/server.png" alt="" /></a>
+					<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/456072311402135552/806099619217932348/computer.png" alt="" /></a>
 					<div class="content">
-						<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
-						<p>저렴한 비용으로 고성능 단독서버를 이용해보시길 바랍니다.</p>
-						<a href="https://rtg.kr/server.html" class="special">소개</a>
+						<h2 class="major">스트리머(Streamer)</h2>
+						<p>커뮤니티 or 쇼핑몰 사이트 제작, 소량 or 대량 다양한 굿즈 제작, 인터넷 방송 홍보 등
+						아프리카TV, 유튜브, 트위치TV 등 다양한 플랫폼에서 방송하는 스트리머들에게 서비스를 제공합니다.</p>
+						<a href="https://rtg.kr/server.html" class="special">상담하기</a>
 					</div>
 				</div>
 			</section>
@@ -82,11 +84,11 @@
 			<!-- Three -->
 			<section id="three" class="wrapper spotlight style3">
 				<div class="inner">
-					<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800947862942646272/custom.png" alt="" /></a>
+					<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/456072311402135552/806099874269233184/chart.png" alt="" /></a>
 					<div class="content">
 						<h2 class="major">맞춤형 서비스(Custom Service)</h2>
-						<p>코로케이션 / 도메인 / 보안서버 / 디도스 방어 / 웹사이트 등 다양한 서비스를 제공하고 있습니다.</p>
-						<a href="http://pf.kakao.com/_xoNpUT" class="special">알아보기</a>
+						<p>도메인 / SSL인증서 / 디도스 방어 등 다양한 서비스를 제공합니다.</p>
+						<a href="http://pf.kakao.com/_xoNpUT" class="special">문의하기</a>
 					</div>
 				</div>
 			</section>
@@ -108,11 +110,13 @@
 				<h2 class="major">유료광고(Ads)</h2>
 				<ul class="contact">
 					<li>
+						<!-- 2021 02 22-->
 						<iframe width="100%" height="315" src="https://www.youtube.com/embed/0DfRJ0KD1rw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</li>
 				</ul>
 				<ul class="contact">
 					<li>
+						<!-- 2021 02 22-->
 						<iframe width="100%" height="315" src="https://www.youtube.com/embed/ZykQ7bgQ2xs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</li>
 				</ul>
