--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<h2 class="major">스트리머(Streamer)</h2>
 						<p>커뮤니티 or 쇼핑몰 사이트 제작, 소량 or 대량 다양한 굿즈 제작, 인터넷 방송 홍보 등
 						아프리카TV, 유튜브, 트위치TV 등 다양한 플랫폼에서 방송하는 스트리머들에게 서비스를 제공합니다.</p>
-						<a href="https://rtg.kr/server.html" class="special">상담하기</a>
+						<a href="http://pf.kakao.com/_xoNpUT" class="special">상담하기</a>
 					</div>
 				</div>
 			</section>
