--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 					<a href="https://rtg.kr/server.html" class="image"><img src="https://cdn.discordapp.com/attachments/749524253321199678/800948511100239872/server.png" alt="" /></a>
 					<div class="content">
 						<h2 class="major">단독서버 호스팅(Dedicated Hosting)</h2>
-						<p>DDR4 CPU E-2136 클럭 4.5GHz 고성능 서버를 제공합니다<br>
-						대역폭 30Mbps, 디도스 방어 10G 기본 제공(추가 가능)</p>
+						<p>E-2134, E-2136 등 고성능 서버를 저렴한 비용으로 이용할 수 있습니다.<br>
+						대역폭 30Mbps, 디도스 방어 기본 제공(추가계약 가능)</p>
 						<a href="https://rtg.kr/server.html" class="special">소개</a>
 					</div>
 				</div>
@@ -73,9 +73,9 @@
 				<div class="inner">
 					<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/456072311402135552/806099619217932348/computer.png" alt="" /></a>
 					<div class="content">
-						<h2 class="major">스트리머(Streamer)</h2>
-						<p>커뮤니티 or 쇼핑몰 사이트 제작, 소량 or 대량 다양한 굿즈 제작, 인터넷 방송 홍보 등
-						아프리카TV, 유튜브, 트위치TV 등 다양한 플랫폼에서 방송하는 스트리머들에게 서비스를 제공합니다.</p>
+						<h2 class="major">소개(Introduce)</h2>
+						<p>2018년부터 디도스 보안 서비스를 중심적으로 웹사이트 제작 및 유지보수, 코로케이션, 서버 호스팅을 제공하고 있습니다.
+						최근에는 온라인 광고, 스트리머 굿즈제작 서비스 또한 제공중입니다.</p>
 						<a href="http://pf.kakao.com/_xoNpUT" class="special">상담하기</a>
 					</div>
 				</div>
@@ -87,7 +87,7 @@
 					<a href="http://pf.kakao.com/_xoNpUT" class="image"><img src="https://cdn.discordapp.com/attachments/456072311402135552/806099874269233184/chart.png" alt="" /></a>
 					<div class="content">
 						<h2 class="major">맞춤형 서비스(Custom Service)</h2>
-						<p>도메인 / SSL인증서 / 디도스 방어 등 다양한 서비스를 제공합니다.</p>
+						<p>1:1 상담을 통해 고객사별 맞춤형 서비스를 제공해드립니다.</p>
 						<a href="http://pf.kakao.com/_xoNpUT" class="special">문의하기</a>
 					</div>
 				</div>
